# ethwarsaw-2025

./: .gitignore  LICENSE.txt  README.md  WARP.md  package-lock.json
claim-web/: package.json
golem-backup/: .env.example  README.md  doc.md  env.example  package.json  tsconfig.json
golem-backup/src/: backup.ts  golem.ts  sheets.ts  verify.ts
landing/: ANALYTICS_SETUP.md  ga-config.js  index.html  manifest.json  robots.txt  sitemap.xml
rpc-node/: .env.example  README.md  SETUP.md  package-lock.json  package.json  redstone.js  test.js
rpc-node/src/: server.js
rpc-node/src/rpc/: handlers.js  validator.js
rpc-node/src/sheets/: client.js  operations.js
sheet-bridge-core/: .gitignore  package-lock.json  package.json  tsconfig.json
sheet-bridge-core/be/: .env.example  .gitignore  bridge.db  db.ts  index.ts  package-lock.json  package.json  tsconfig.json
sheet-bridge-core/evm/: .env.example  .gitignore  README.md  hardhat.config.ts  package-lock.json  package.json
sheet-bridge-core/scripts/: initializeLock.ts
sheet-bridge-core/solana/: .prettierrc.json  Anchor.toml  package-lock.json  package.json
sheet-bridge-core/solana/programs/lock/: Cargo.toml
sheet-bridge-core/tests/: lock.ts  utils.ts
sheet-bridge-ui/: .gitignore  .prettierignore  index.html  package-lock.json  package.json  vite.config.ts
sheet-bridge-ui/src/: App.tsx  config.ts  index.css
sheetchain-base-app/: farcaster.json  package.json
sheetchain-base-app/app/: page.tsx
sheetcoin/: Cargo.toml  SheetCoin.json  deployment.md
sheetcoin/src/: erc20.rs  lib.rs  main.rs
(+42 files in other folders)
