[package]
name = "lock"
version = "0.1.0"
description = "Bridge functionality on Solana side"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lock"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"

